# civicsafe-backend

./: .env.example  .gitignore  README.md  analytics_exporter.py  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
routers/: __init__.py  analytics_router.py  auth_router.py  authority_router.py  detection_router.py
