[project]
name = "civicsafe-backend"
version = "0.1.0"
description = "CivicSafe Backend API"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openpyxl>=3.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "ultralytics>=8.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[tool.uv]
package = false
